--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -56,7 +56,7 @@ footer {
 /* Individual Bordered Containers */
 #my-story {
     background-color: azure;
-    width: 32%;
+    width: 32vw;
     height: 98.6%;
     border: 0.2em solid darkblue;
     margin: 0.2vh;
