--- a/styles/portfolio_styles.css
+++ b/styles/portfolio_styles.css
@@ -35,7 +35,7 @@ div div, nav {
 .vertical-div {
     display: flex;
     flex-direction: column;
-    max-width: calc(33.1vw - 1em);
+    max-width: calc((100% - 1.6em) / 3);
     height: 90vh;
 }
 
